为登录做准备

--- a/app.json
+++ b/app.json
@@ -1,7 +1,12 @@
 {
   "pages":[
+    "pages/binding/binding",
+    "pages/login/login",
     "pages/home/home",
     "pages/tomato/tomato",
+    "pages/me/me",
+    
+    
     "pages/index/index",
     "pages/logs/logs"
   ],
@@ -30,7 +35,7 @@
         "selectedIconPath": "images/total-active.png"
       },
       {
-        "pagePath": "pages/home/home",
+        "pagePath": "pages/me/me",
         "text": "我的",
         "iconPath": "images/me.png",
         "selectedIconPath": "images/me-active.png"
